@@ -314,11 +314,7 @@ public class GraphqlTableFieldFactory {
           GraphQLFieldDefinition.newFieldDefinition().name("count").type(Scalars.GraphQLInt));
       List<Column> aggCols =
           table.getColumnsIncludingSubclasses().stream()
-              .filter(
-                  c ->
-                      ColumnType.INT.equals(c.getColumnType())
-                          || ColumnType.DECIMAL.equals(c.getColumnType())
-                          || ColumnType.LONG.equals(c.getColumnType()))
+              .filter(c -> c.getColumnType().isNumericType())
               .toList();
       if (aggCols.size() > 0) {
         GraphQLObjectType.Builder sumBuilder =
@@ -371,11 +367,7 @@ public class GraphqlTableFieldFactory {
     if (schema.hasActiveUserRole(VIEWER) || table.getTableType().equals(ONTOLOGIES)) {
       List<Column> aggCols =
           table.getColumnsIncludingSubclasses().stream()
-              .filter(
-                  c ->
-                      ColumnType.INT.equals(c.getColumnType())
-                          || ColumnType.DECIMAL.equals(c.getColumnType())
-                          || ColumnType.LONG.equals(c.getColumnType()))
+              .filter(c -> c.getColumnType().isNumericType())
               .toList();
 
       if (!aggCols.isEmpty()) {
@@ -425,12 +417,18 @@ public class GraphqlTableFieldFactory {
           tableFilterInputType, GraphQLTypeReference.typeRef(tableFilterInputType));
       GraphQLInputObjectType.Builder filterBuilder =
           GraphQLInputObjectType.newInputObject().name(tableFilterInputType);
-      if (table.getPrimaryKeyColumns().size() > 0) {
-        filterBuilder.field(
-            GraphQLInputObjectField.newInputObjectField()
-                .name(FILTER_EQUALS)
-                .type(GraphQLList.list(getPrimaryKeyInput(table)))
-                .build());
+      if (!table.getPrimaryKeyColumns().isEmpty()) {
+        filterBuilder
+            .field(
+                GraphQLInputObjectField.newInputObjectField()
+                    .name(FILTER_EQUALS)
+                    .type(GraphQLList.list(getPrimaryKeyInput(table)))
+                    .build())
+            .field(
+                GraphQLInputObjectField.newInputObjectField()
+                    .name(FILTER_NOT_EQUALS)
+                    .type(GraphQLList.list(getPrimaryKeyInput(table)))
+                    .build());
       }
       if (TableType.ONTOLOGIES.equals(table.getTableType())) {
         filterBuilder.field(
@@ -614,13 +612,21 @@ public class GraphqlTableFieldFactory {
                   Arrays.stream(entry.getValue().toString().split(" ")).toArray(String[]::new)));
         }
       } else if (entry.getKey().equals(FILTER_EQUALS)) {
-        //  complex filter, should be an list of maps per graphql contract
+        //  complex filter, should be a list of maps per graphql contract
         if (entry.getValue() != null) {
           subFilters.add(
               or(
                   ((List<Map<String, Object>>) entry.getValue())
-                      .stream().map(v -> createKeyFilter(table, v)).collect(Collectors.toList())));
+                      .stream().map(v -> createKeyFilter(table, v, Operator.EQUALS)).toList()));
         }
+      } else if (entry.getKey().equals(FILTER_NOT_EQUALS)) {
+        if (entry.getValue() != null) {
+          subFilters.add(
+              or(
+                  ((List<Map<String, Object>>) entry.getValue())
+                      .stream().map(v -> createKeyFilter(table, v, Operator.NOT_EQUALS)).toList()));
+        }
+
       } else if (entry.getKey().equals(FILTER_MATCH_INCLUDING_CHILDREN)
           || entry.getKey().equals(FILTER_MATCH_INCLUDING_PARENTS)
           || entry.getKey().equals(FILTER_MATCH_PATH)
@@ -714,7 +720,8 @@ public class GraphqlTableFieldFactory {
     return subFilters.toArray(new FilterBean[subFilters.size()]);
   }
 
-  private static Filter createKeyFilter(TableMetadata table, Map<String, Object> map) {
+  private static Filter createKeyFilter(
+      TableMetadata table, Map<String, Object> map, Operator operator) {
     Objects.requireNonNull(table);
     Objects.requireNonNull(map);
     List<Filter> result = new ArrayList<>();
@@ -729,9 +736,9 @@ public class GraphqlTableFieldFactory {
             f(
                 column.get().getName(),
                 createKeyFilter(
-                    column.get().getRefTable(), (Map<String, Object>) entry.getValue())));
+                    column.get().getRefTable(), (Map<String, Object>) entry.getValue(), operator)));
       } else {
-        result.add(f(column.get().getName(), Operator.EQUALS, entry.getValue()));
+        result.add(f(column.get().getName(), operator, entry.getValue()));
       }
     }
     return and(result);
@@ -890,7 +897,7 @@ public class GraphqlTableFieldFactory {
       TableMetadata aTable, Map<String, Object> args) {
     Map<String, Order> orderBy = (Map<String, Order>) args.get(ORDERBY);
     Map<String, Order> unescapedMap = new HashMap<>();
-    for (var entry : orderBy.entrySet()) {
+    for (Map.Entry<String, Order> entry : orderBy.entrySet()) {
       Optional<Column> column = findColumnById(aTable, entry.getKey());
       if (column.isPresent()) {
         unescapedMap.put(column.get().getName(), entry.getValue());
@@ -1053,14 +1060,7 @@ public class GraphqlTableFieldFactory {
       case LONG_ARRAY -> GraphQLList.list(GraphQLLong);
       case DECIMAL_ARRAY -> GraphQLList.list(Scalars.GraphQLFloat);
       case JSON -> GraphqlCustomTypes.GraphQLJsonAsString;
-      case STRING_ARRAY,
-              TEXT_ARRAY,
-              DATE_ARRAY,
-              DATETIME_ARRAY,
-              PERIOD_ARRAY,
-              UUID_ARRAY,
-              EMAIL_ARRAY,
-              HYPERLINK_ARRAY ->
+      case STRING_ARRAY, TEXT_ARRAY, DATE_ARRAY, DATETIME_ARRAY, PERIOD_ARRAY, UUID_ARRAY ->
           GraphQLList.list(Scalars.GraphQLString);
       default ->
           throw new MolgenisException(
